# josemiCLib

./: CMakeLists.txt  README.md
doc/: fifo.md  monitor.md  mutex.md  semaphore.md  threads.md  util.md
doc/os/: unix.md  windows.md
include/: fifo.h  monitor.h  mutex.h  sem.h  semaphore.h  threads.h  utils.h
include/unix/: unixfifo.h  unixutils.h
include/windows/: winfifo.h  winutils.h
src/: condVar.c  condVar.h  fifo.c  fifo.h  monitor.c  mutex.c  mutex.h  sem.c  semaphore.c  semaphore.h  threads.c  threads.h  utils.c
src/unix/: CMakeLists.txt  unixfifo.c  unixfifo.h  unixutils.c  unixutils.h
src/windows/: CMakeLists.txt  winfifo.c  winfifo.h  winutils.c
tests/: monitorTest.c  mutexTest.c
